--- a/index.html
+++ b/index.html
@@ -1,6 +1,32 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "ديوان الدانة",
+  "image": "https://dewanaldanah.com/logo.png",
+  "url": "https://dewanaldanah.com",
+  "telephone": "+966579507255",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "جدة",
+    "addressRegion": "مكة المكرمة",
+    "postalCode": "23334",
+    "addressCountry": "SA"
+  }
+}
+</script>    
 <head>
+    <title>ديوان الدانة | شركة مقاولات عامة في جدة</title>
+
+    <meta name="description" content="شركة ديوان الدانة للمقاولات العامة في جدة تقدم خدمات الإنشاءات، الترميم، التشطيبات، الكهرباء، التكييف والبنية التحتية بأعلى معايير الجودة. تواصل معنا الآن.">
+
+    <meta name="keywords" content="شركة مقاولات جدة, مقاول جدة, تشطيب فلل جدة, ترميم مباني جدة, تمديدات كهرباء جدة, مقاول عام جدة">
+
+    <meta name="author" content="ديوان الدانة">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ديوان الدانة - شركة إنشاءات رائدة في جدة، المملكة العربية السعودية">
@@ -1212,4 +1238,5 @@
         });
     </script>
 </body>
+
 </html>
